GNOME Bugzilla – Bug 671106
pam_winbind will not allow gdm login if password about to expire
Last modified: 2018-05-24 10:41:52 UTC
While gdm receive PAM_RADIO_TYPE message from a pam_module, it crashes. relevant bug report. https://bugzilla.samba.org/show_bug.cgi?id=8691 https://bugzilla.novell.com/show_bug.cgi?id=738757
Created attachment 208769 [details] [review] a suggest solution Some modules send PAM_RADIO_TYPE message to gdm (samba: commit 2d063d077aed01f020352e859b766415fe094fa5 nsswitch/pam_winbind.c), then gdm crashes. I wrote a patch for the suse 11 version, it will popup a dialog with radios for the user to click. In the upstream version, an extra dialog might be a little wired. This patch reuse the 'ask_question' method and add 'yes/no/maybe' to the prompt_label, the side effect is we need to type 'yes' other than click on the radio and it may make the prompt_label much wider.
From linux-pam/CHANGELOG: * added PAM_RADIO_TYPE (for multiple choice input method). Also added PAM_BINARY_{MSG,PROMPT} (for interaction out of sight of user - this could be used for RSA type authentication but is currently just there for experimental purposes). The _BINARY_ types are now usable with hooks in the libpam_misc conversation function. Still have to add PAM_RADIO_TYPE. So PAM_RADIO_TYPE is still not usable. The PAM_RADIO_TYPE interface is not documented and not even complete. It would be a better idea to complete the implementation (and document it) in linux-pam first and then write the samba as well as gdm interfaces to support it in the correct manner.
on the gdm side, we should change which buttons are shown "(so show [No] [Yes] instead of [Sign In] or so) Definitely wrong to show dialogs or make the user manually type "yes"
Created attachment 209052 [details] [review] radio buttons embeded Add two radio button 'yes' and 'no' to the page.ui. radio_info_query added to relevant codes. Question, report_info and report_problem were merged together in the greeter (GdmServiceMessageType), any plan to merge these in the daemon, for example gdm_session_worker_report (worker, type, msg)? And will ask_question ask_for_secret also be merged?
I think comment 4 has the wrong attachment in it. Of course, I took so long to respond to this, the right attachment is no longer relevant. I've pushed this patch as an interim solution until proper support can be added in. It's certainly better than crashing. Sorry for taking so long to respond. It fell off my radar. I'm keeping the bug open until we do things "right"
-- GitLab Migration Automatic Message -- This bug has been migrated to GNOME's GitLab instance and has been closed from further activity. You can subscribe and participate further through the new bug through this link to our GitLab instance: https://gitlab.gnome.org/GNOME/gdm/issues/93.