worker: fix crasher for PAM_RADIO_TYPE messages

Some modules send PAM_RADIO_TYPE message to gdm (samba: commit
2d063d077aed01f020352e859b766415fe094fa5 nsswitch/pam_winbind.c),
then gdm crashes.

This commit reuses the 'ask_question' method and add 'yes/no/maybe'
to the prompt_label, which avoids the crash.  It's suboptimal because
the user needs to type 'yes' manually rather than clicking on a UI element,
and because yes, no, and maybe aren't translated.

It's a temporary workaround until more complete support can get added.

https://bugzilla.gnome.org/show_bug.cgi?id=671106